--- a/index.html
+++ b/index.html
@@ -8,18 +8,32 @@
 </head>
 <body>
     <div class="container">
-        <!-- قائمة القنوات -->
-        <aside class="sidebar">
+        <!-- شريط القنوات الجانبي -->
+        <div class="sidebar">
             <h2>القنوات</h2>
             <ul id="channel-list">
-                <!-- سيتم إنشاء القنوات ديناميكيًا بواسطة JavaScript -->
+                <!-- القنوات ستُضاف هنا -->
             </ul>
-        </aside>
+            <div class="add-channel">
+                <input type="text" id="new-channel-name" placeholder="اسم القناة">
+                <input type="text" id="new-channel-url" placeholder="رابط البث">
+                <button onclick="addChannel()">إضافة قناة</button>
+            </div>
+        </div>
 
-        <!-- مشغل الفيديو -->
-        <main class="video-player">
-            <video id="video-player" controls autoplay width="100%" height="auto"></video>
-        </main>
+        <!-- منطقة عرض المباراة -->
+        <div class="video-player">
+            <h2 id="current-channel">قناة: غير محددة</h2>
+            <video id="video-stream" controls></video>
+            <div class="resolution-selector">
+                <label for="resolution">اختر الدقة:</label>
+                <select id="resolution" onchange="changeResolution()">
+                    <option value="360">360p</option>
+                    <option value="720">720p</option>
+                    <option value="1080">1080p</option>
+                </select>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
